Refactor PostgresService and update configurations
Revamped County search methods in PostgresService for better database querying. Updated methods now use JpaExampleFunctions and handle lists. Minor changes in configurations are included, majorly in application.yaml and pom.xml. Two new projection classes, CountyInfo and MunicipalityInfo, were added for improved data handling.